# prp

./: pyproject.toml  requirements.txt
prp/: cli.py  config.py  main.py
